--- a/bazaar/old_templates/bidlist_tmp.html
+++ b/bazaar/old_templates/bidlist_tmp.html
@@ -26,33 +26,8 @@
 
 
 <body>
-  <style>
-  #table1 {
-      font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-  }
-
-  #table1 td, #table1 th {
-      border: 1px solid #ddd;
-      padding: 8px;
-  }
-
-  #table1 tr:nth-child(even){background-color: #f2f2f2;}
-
-  #table1 tr:hover {background-color: #ddd;}
-
-  #table1 th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
-      background-color: #3e81cb;
-      color: white;
-  }
-  
-</style>
 	<p style="color: red">{{bidstatus}}</p>
-	<table id="table1" style="width:100%;color: black">
+	<table style="width:100%;color: black">
           <tr>
             <th>Name</th>
             <th>Comment</th> 
