--- a/bazaar/old_templates/product_tmp.html
+++ b/bazaar/old_templates/product_tmp.html
@@ -66,29 +66,17 @@
 		input[type=button], input[type=submit], input[type=reset] {
 		    background-color: #4CAF50;
 		    border: none;
-		    border-top-left-radius: 15px;
-   		    border-bottom-right-radius: 15px;
 		    color: white;
 		    padding: 16px 32px;
 		    text-decoration: none;
+		    margin: 4px 2px;
 		    cursor: pointer;
-		}
-		input[type=button], input[type=submit], input[type=reset]:hover {background-color: #3e8e41}
-
-		input[type=button], input[type=submit], input[type=reset]:active {
-			  background-color: #3e8e41;
-			  box-shadow: 0 5px #666;
-			  transform: translateY(4px);
 		}
 		#table1{
 			margin-left: auto;
 			margin-right: auto;	
 		}
-		#table1 th {
-	      color:white;
-	      padding-top: 10px;
-	    }
-	
+
 </style>
 
 <body>
@@ -105,7 +93,7 @@
 			<p id="product_description">{{ad.description}}</p>
 			<br>
 			<form method="POST"  action="{% url 'bidURL' %}">{% csrf_token %}
-		    	<table id ="table1" style="color:black;">
+		    	<table id ="table1">
 		    		{{ bidform }}
 				</table>
 			<input type="hidden" name="ad" value="{{ad.id}}"/>
